--- a/workslip.html
+++ b/workslip.html
@@ -36,7 +36,10 @@
     <div class="column">
       <h2>Copies</h2>
       <table id="copyTable">
-        <tr><th>Copy Location</th><th>Staff Note</th><th>Receipt Status</th></tr>
+        <thead>
+          <tr><th>Copy Location</th><th>Staff Note</th><th>Receipt Status</th></tr>
+        </thead>
+        <tbody id="copyTableBody"></tbody>
       </table>
     </div>
     <script type="text/javascript" src="workslip.js"></script>
